# VoxelRender

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua  setup.bat
VoxelRender/: premake5.lua
VoxelRender/assets/models/: castles.vox
VoxelRender/assets/shaders/: VoxelShader.frag.glsl  VoxelShader.vert.glsl  light.frag.glsl  light.vert.glsl  test.frag.glsl  test.vert.glsl
VoxelRender/src/: main.cpp
VoxelRender/src/Graphics/: Camera.cpp  Camera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  VoxelArray.cpp  VoxelArray.h  Window.cpp  Window.h
VoxelRender/src/Input/: Input.cpp  Input.h
VoxelRender/src/Utils/: Utils.h
VoxelRender/src/VoxelReader/: Reader.cpp  Reader.h
VoxelRender/src/VoxelReader/Chunks/: Chunk.cpp  Chunk.h  PaletteChunk.h  SizeChunk.h  VoxelChunk.h
